src/objects/TIMBASURVEYS__QuestionType__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AnswerOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AnswerOption</label>
        <referenceTo>TIMBASURVEYS__AnswerOption__c</referenceTo>
        <relationshipName>SurveyStatistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipName>SurveyStatistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>SurveyStats</relationshipLabel>
        <relationshipName>SurveyStats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__TimesSelected__c</fullName>
        <label>TimesSelected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SurveyStats</label>
    <nameField>
        <label>SurveyStats</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SurveyStats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>